--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Meta Information -->
+    <!-- ~~ Meta Information -->
     <title>Tweeter - Home Page</title>
 
-    <!-- External CSS -->
+    <!-- ~~ Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+
+    <!-- ~~ External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
 
-    <!-- App CSS -->
+    <!-- ~~ App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
-    <!-- External JS -->
+    <!-- ~~ Componets CSS -->
+    <link rel="stylesheet" href="/styles/components/nav.css" />
+    <link rel="stylesheet" href="/styles/components/header.css" />
+    <link rel="stylesheet" href="/styles/components/tweeting.css" />
+
+    <!-- ~~ External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <!-- App JS -->
+    <!-- ~~ App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
   </head>
 
   <body>
-    <!-- Top nav bar (fixed) -->
-    <nav>
-      <span>tweeter</span>
+    <!-- ~~ Top nav bar (fixed) -->
+    <nav class="Nav">
+      <div class="Nav__container">
+        <span class="Nav__logo">tweeter</span>
+        <span class="Nav__input"><bold>Write</bold> a new tweet</span>
+      </div>
     </nav>
+    <div class="Nav__spacer"></div>
+    <!-- ~~ Page Header -->
+    <header class="Header">
+      <div class="Header__img">
+        <img src="/images/profile-hex.png">
+      </div>
+      <br>
+      <div class="Header__user">
+        <h2>Heisey</h2>
+      </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+
+      <!-- ~~ New Tweet Section -->
+      <section class="Tweeting">
+        <h2 class="Tweeting__title">Compose Tweet</h2>
+        <form 
+            class="Tweeting__form" 
+            method="POST" 
+            action="/tweets/"
+        >
+          <label 
+              for="Tweeting__form--text"
+              class="Tweeting__form--label"
+          >
+            What are you humming about?
+          </label>
+          <textarea 
+              name="text" 
+              id="Tweeting__form--text"
+              class="Tweeting__form--textArea"
+          ></textarea>
+          <div class="Tweeting__form--footer">
+            <button 
+                type="submit"
+                class="Tweeting__form--button"
+            >
+              Tweet
+            </button>
+            <output 
+              name="counter" 
+              class="Tweeting__form--counter" 
+              for="Tweeting__form--text"
+            >
+              140
+            </output>
+          </div>
+          
+        </form>
+      </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<p>
+        
+
+You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.
+
+The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
+
+Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
+
+You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.
+
+Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
+
+
+</p>
+
+<p>
+
+
+You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.
+
+The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
+
+Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
+
+You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.
+
+Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
+
+
+</p>
+    </main>
   </body>
 </html>
