finished responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <nav class="Nav">
       <div class="Nav__container">
         <span class="Nav__logo">tweeter</span>
-        <span class="Nav__input"><bold>Write</bold> a new tweet</span>
+        <button id="Nav__button" class="Nav__button">Tweet!</button>
       </div>
     </nav>
     <!-- ~~ Start Grid -->
