Added commenting to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         </div>
       </header>
   
-      <!-- Page-specific (main) content here -->
+      <!-- ~~ Main Container -->
       <main class="container">
   
         <!-- ~~ New Tweet Section -->
@@ -85,6 +85,7 @@
           </form>
         </section>
   
+        <!-- ~~ All Tweets template generated -->
         <section id="Tweets" class="Tweets">
           
         </section>
